//
//  MainScreenViewController.swift
//  ForeverSingle
//
//  Created Swasidhant Chowdhury on 09/02/18.
//  Copyright © 2018 Swasidhant Chowdhury. All rights reserved.
//
//  Template generated by Juanpe Catalán @JuanpeCMiOS
//

import UIKit

class MainScreenViewController: UIViewController {

    @IBOutlet weak var tblMain: UITableView!
    
    let arrData = ["Advantages", "Prediction", "Weather Condition"]

	override func viewDidLoad() {
        super.viewDidLoad()
        self.intialUISetup()
    }
    
    func intialUISetup() {
        self.tblMain.tableFooterView = UIView()
    }

}

extension MainScreenViewController: UITableViewDataSource {
    func tableView(_ tableView: UITableView, numberOfRowsInSection section: Int) -> Int {
        return 3
    }
    
    func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
        let cell = tableView.dequeueReusableCell(withIdentifier: "MainCell") as! MainScreenTableViewCell
        cell.assignCell(text: self.arrData[indexPath.row])
        return cell
    }
}

extension MainScreenViewController: UITableViewDelegate {
    func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
        switch indexPath.row {
        case 0:
            self.pushAdvantages()
        case 1:
            self.calculatePredictionAndShow()
        case 2:
            self.callWeatherAPI()
        default:
            break
        }
        tableView.deselectRow(at: indexPath, animated: true)
    }
    
    func pushAdvantages() {
        let advVC = UIStoryboard.init(name: "Main", bundle: nil).instantiateViewController(withIdentifier: "AdvantagesScene") as! AdvantagesViewController
        self.navigationController?.pushViewController(advVC, animated: true)
    }
}

extension MainScreenViewController {
    func calculatePredictionAndShow() {
        let predictionPercent = PredictionCalculator().calculatePrediction()
        self.showAlert(message: "You have \(predictionPercent) % of getting committed")
    }
    
    fileprivate func showAlert(message: String) {
        let alertViewController = UIAlertController.init(title: "Prediction", message: message, preferredStyle: .alert)
        alertViewController.addAction(UIAlertAction.init(title: "Ok", style: .default, handler: {alert in
            alertViewController.dismiss(animated: true, completion: nil)
        }))
        self.present(alertViewController, animated: true, completion: nil)
    }
}

extension MainScreenViewController {
    func callWeatherAPI() {
        NetworkManager.fetchWeatherData { dataDict in
            var weatherDesc = ""
            let firstWeatherListElement = (dataDict["list"] as! [[AnyHashable: Any]])[0]
            
            weatherDesc = ((firstWeatherListElement["weather"] as! [[AnyHashable: Any]])[0])["description"] as! String
            self.showAlert(message: "\(weatherDesc) weather in Bengaluru. Such a romantic weather! But you are still single :(")
        }
    }
}
