...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="3NQ-jx-eZj" secondAttribute="bottom" id="hRb-fl-uZU"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3NQ-jx-eZj" secondAttribute="trailing" id="krs-TD-GAI"/>
                            <constraint firstItem="3qu-6f-zge" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="v8r-aJ-fhb"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Forever Single" id="GM1-cm-rCF"/>
                    <connections>
                        <outlet property="tblMain" destination="3NQ-jx-eZj" id="Xaq-Ws-fCi"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
...
